<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Linphone</string>
    <string name="service_name">Linphone Service</string>
    <string name="addressbook_label">Linphone</string>
    <string name="notification_title">Linphone</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s registered</string>
    <string name="notification_register_failure">%s failed to register</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Linphone Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_text">GNU General Public License V2\n © 2010-2016 Belledonne Communications</string>
    <string name="about_link">www.linphone.org</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="history_date_format">EEE, d MMM</string>
    <string name="history_detail_date_format">yyyy/MM/dd - HH:mm - </string>
    <string name="inapp_popup_date_format">yyyy/MM/dd</string>
    <string name="inapp_popup_date_day">dd</string>
    <string name="messages_date_format">dd/MM, HH:mm</string>
    <string name="messages_list_date_format">dd/MM</string>
    <string name="today_date_format">HH:mm</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number ?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already in use.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already in used.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="login_with_username">Use your username and password instead of your phone number</string>
    <string name="phone_number_info_title">What will my phone number be used for?</string>
    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Linphone and your friends will know that they can rach you on Linphone as well.\n</string>
    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using Linphone and your friends will know that they can reach you on Linphone as well.\n</string>
    <string name="phone_number_link_info_content_already_account">You can only use your phone number with one Linphone account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="phone_number_not_exist">This account does not exist</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_domain">Invalid domain</string>
    <string name="invalid_route">Invalid route</string>
    <string name="invalid_display_name">Invalid display name</string>
    <string name="username_too_short">Username too short</string>
    <string name="username_too_long">Username too long</string>
    <string name="username_invalid_size">Username length invalid</string>
    <string name="phone_number_too_long">Phone number too long</string>
    <string name="phone_number_too_short">Phone number too short</string>
    <string name="phone_number_invalid">Invalid phone number</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_too_long">Password too long</string>
    <string name="request_failed">Failed to query the server. Please try again later</string>
    <string name="transport_unsupported">Unsupported transport</string>
    <string name="country_code_invalid">Country code invalid</string>
    <string name="inapp">In-app</string>
    <string name="inapp_notification_title">In-app purchase</string>
    <string name="inapp_notification_trial_expire">The trail period expires on %s</string>
    <string name="inapp_notification_account_expire">The subscription period expires on %s</string>
    <string name="address_bar_hint">Enter a number or an address</string>
    <string name="no_call_history">No call in your history</string>
    <string name="no_missed_call_history">No missed call in your history</string>
    <string name="friends">好友</string>
    <string name="number_blocking_description">阻断拦截电话</string>
    <string name="number_blocking2">阻断号码：</string>
    <string name="blocking_time">阻断时间：</string>
    <string name="blocking_duration">阻断间隔：</string>
    <string name="block_number_hint">请输入阻断号码</string>
    <string name="block_time_hint">默认获取系统时间</string>
    <string name="block_duration_hint">请选择间隔时间</string>
    <string name="unitBelong">吉林省公安厅  版权所有</string>
    <string name="un_settings">未设置</string>
    <string name="random_number">随机号码</string>
    <string name="custom">自定义</string>
    <string name="unit_number">集团号码</string>
    <string name="sip_setting">SIP设置</string>
    <string name="ip_hint">请输入ip地址 host [:port]</string>
    <string name="confirm">确定</string>
    <string name="clear">清空</string>
    <string name="dial_number_blocking">电话阻断</string>
    <string name="stop_call">停止拨打</string>
    <string name="start_call">开始拨打</string>
    <string name="call_count">拨打次数：</string>
    <string name="inputPassword">输入密码</string>
    <string name="goto_voip_setting">进入voip设置</string>
    <string name="group_chat">群聊</string>
</resources>