<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/previous"
        app:title="SIP设置"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sip_setting"
                android:textColor="@color/colorTextColorDark"
                android:textSize="@dimen/dp_20" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <EditText
            android:id="@+id/sip_server_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/sip_setting_edit_bg"
            android:hint="@string/ip_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_16">

            <TextView
                android:id="@+id/mClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sip_setting_edit_bg"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/clear" />

            <View
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_0" />

            <TextView
                android:id="@+id/mConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_dial_call"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
