<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_100"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mUnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:tag="1"
        android:text="@string/un_settings"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@color/colorBg" />

    <LinearLayout
        android:id="@+id/mRandomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:tag="2"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/random_number" />

        <!--<TextView-->
        <!--android:id="@+id/randomShow"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:maxLength="12"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true" />-->

        <!--<Button-->
        <!--android:id="@+id/mReplace"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="@dimen/dp_16"-->
        <!--android:text="更改" />-->


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@color/colorBg" />

    <LinearLayout
        android:id="@+id/mCustomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:tag="3"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/custom" />

        <!--<EditText-->
        <!--android:id="@+id/mCustomNumberInput"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/white"-->
        <!--android:hint="@string/customHint"-->
        <!--android:imeOptions="actionDone"-->
        <!--android:inputType="phone"-->
        <!--android:maxLength="12"-->
        <!--android:maxLines="1"-->
        <!--android:paddingTop="@dimen/dp_4"-->
        <!--android:paddingBottom="@dimen/dp_4"-->
        <!--android:singleLine="true"-->
        <!--android:textSize="@dimen/sp_18" />-->

        <!--<Button-->
        <!--android:id="@+id/mCustomNumber"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="@dimen/dp_16"-->
        <!--android:singleLine="true"-->
        <!--android:text="@string/confirm" />-->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@color/colorBg" />

    <TextView
        android:id="@+id/unitNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:tag="4"
        android:text="@string/unit_number"
        android:visibility="gone" />

</LinearLayout>